Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104447

qmlsc miscompiles bindings that throw exceptions

XMLWordPrintable

    • 87f9847144 (qt/qtdeclarative/dev) 87f9847144 (qt/tqtc-qtdeclarative/dev) e1210581d5 (qt/tqtc-qmlcompilerplus/6.2) e0cef42aa0 (qt/qtdeclarative/6.4) 6ec334034a (qt/qtdeclarative/6.3) 6ec334034a (qt/tqtc-qtdeclarative/6.3)

      This produces invalid code:

      import QtQml
      QtObject {
          objectName: { throw "no" }
      }
      

        For Gerrit Dashboard: QTBUG-104447
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: