src/qmlcompiler/qqmljscodegenerator.cpp
@@ -382,8 +382,11 @@ void QQmlJSCodeGenerator::eliminateDeadStores()
 
 QString QQmlJSCodeGenerator::errorReturnValue() const
 {
-    if (m_function->returnType)
-        return conversion(m_typeResolver->voidType(), m_function->returnType, QString());
+    if (auto ret = m_function->returnType) {
+        return ret->accessSemantics() == QQmlJSScope::AccessSemantics::Reference
+                ? conversion(m_typeResolver->voidType(), ret, QString()) // produces nullptr
+                : ret->internalName() + u"()"_qs;
+    }
     return QString();
 }
 
@@ -1616,6 +1619,7 @@ void QQmlJSCodeGenerator::generate_ThrowException()
                          m_typeResolver->jsValueType()),
                      use(m_state.accumulatorVariableIn)) + u");\n"_qs;
     m_body += u"return "_qs + errorReturnValue() + u";\n"_qs;
+    m_skipUntilNextLabel = true;
 }
 
 void QQmlJSCodeGenerator::generate_GetException()
