tests/auto/qml/qmlcppcodegen/data/throwObjectName.qml
@@ -1,0 +1,6 @@
+pragma Strict
+import QtQml
+
+QtObject {
+    objectName: { throw "ouch" }
+}
